[package]
name        = "flywheelmc-common"
version     = "0.1.0"
authors     = ["FlywheelMC <https://github.com/FlywheelMC>"]
description = "FlywheelMC common dependencies"
license     = "LGPL-3.0-only"

readme     = "README.md"
homepage   = "https://github.com/FlywheelMC"
repository = "https://github.com/FlywheelMC/flywheelmc-common"
publish    = false

keywords   = [ "flywheel", "mc", "minecraft", "game" ]
categories = [ ]

edition      = "2024"
rust-version = "1.89"


[dependencies.flywheelmc-logging]
path = "../flywheelmc-logging"
[dependencies.voxidian-protocol]
path     = "../voxidian-protocol"
features = [ "text_xml" ]

[dependencies.uuid]
version = "1.16"
[dependencies.rand]
version = "0.9"
[dependencies.disqualified]
version = "1.0"
[dependencies.chrono]
version = "0.4"
[dependencies.bimap]
version = "0.6"

[dependencies.clap]
version  = "4.5"
features = [ "derive" ]

[dependencies.tokio]
version  = "1.44"
features = [ "full" ]
[dependencies.futures]
version  = "0.3"
features = [ "executor" ]

[dependencies.bevy_app]
version = "0.16"
[dependencies.bevy_defer]
version          = "0.14"
default-features = false
[dependencies.bevy_diagnostic]
version = "0.16"
[dependencies.bevy_ecs]
version = "0.16"
[dependencies.bevy_time]
version = "0.16"


[lints.rust]
unused_parens = "allow"
